# hacksoc.org

./: .#activities.html  .flaskenv  .gitignore  CNAME  README.markdown  README.md  _config.yml  _local_config.yml  about.html  activities.html  advertise.html  committee.html  grant.html  hacksoc-org.cabal  hakyll.hs  index.html  init-venv.sh  irc.html  main.js  package-lock.json  package.json  params.json  pip-requirements.txt  pyproject.toml  reading.html  seminars.html  setup.cfg  stack.yaml  style.css
_layouts/: post.html  wrapper.html
_posts/: 2014-01-20-bytemark-sponsorship.md  2014-01-20-website-changes.md  2014-01-22-agm.md  2014-01-29-agm-update.md  2014-02-08-agm-results.md  2014-11-14-mini-game-jame.md  2015-02-26-agm-results.md  2015-07-31-egm-results.md  2015-31-07-egm-results.md
courses/: index.html
docs/: README.md  adding_features_python.md  creating_modifying_complex_pages.md  creating_modifying_simple_pages.md  development_and_git.md  index.md  minutes.md  servers.md  writing_articles.md
hacksoc_org/: __init__.py  __main__.py  cli.py  consts.py  filters.py  freeze.py  git.py  loaders.py  markdown.py  mistletoe_pygments_renderer.py  news_loader.py  routes.py  serve.py  server_loader.py  util.py
news/: 2014-01-20-bytemark-sponsorship.md  2014-01-20-website-changes.md  2014-01-22-agm.md  2014-01-29-agm-update.md  2014-02-08-agm-results.md  2014-11-14-mini-game-jame.md  2015-02-26-agm-results.md  2015-07-31-egm-results.md  2016-02-07-agm.md  2016-02-21-agm-results.md  2017-01-16-workshop.md  2017-02-04-agm.md  2017-02-05-agm.md  2017-03-03-agm-results.md  2017-10-09-Jim-Austin_Museum_trip.md  2018-03-09-AGM-2018-results.md  2018-03-6-AGM-2018.md  2018-10-19-EGM-2018.md  2019-02-14-agm.md  2019-03-01-agm-results.md  2019-06-07-egm.md  2019-06-14-egm-results.md  2019-06-19-call-for-talk-submissions.md  2019-09-18-autumn-term-talks  2020-02-21-agm.md  2020-03-01-agm-results.md  2020-04-12-call-for-submissions-summer.md  2020-09-01-freshers-fair.md  2020-09-08-call-for-submissions-autumn.md  2021-02-26-agm.md  2021-03-05-agm-results.md  2021-05-25-moving-to-libera.md  (+1 more)
(+109 files in other folders)
