name:                hacksoc-org
version:             0.1.0.0
synopsis:            HackSoc website
homepage:            https://www.hacksoc.org
author:              Michael Walker
maintainer:          hack@yusu.org
build-type:          Simple
cabal-version:       >=1.10

executable hacksoc-org
  main-is:             hakyll.hs
  build-depends:       base >=4.8 && <4.9
                     , hakyll >= 4.7 && < 4.8
  default-language:    Haskell2010
