name:                hacksoc-org
version:             0.1.0.0
synopsis:            HackSoc website
homepage:            https://www.hacksoc.org
author:              Michael Walker
maintainer:          hack@yusu.org
build-type:          Simple
cabal-version:       >=1.10

executable hacksoc-org
  main-is:             hakyll.hs
  build-depends:       base, hakyll, filepath
  default-language:    Haskell2010
