[metadata]
name = hacksoc_org
version = 1.0.0

[options]
packages = find:
install_requires =
    flask
    python-dotenv
    frozen-flask
    pyyaml
    markdown2
    pygments
    python-frontmatter
    pygit2
    black

[options.entry_points]
console_scripts = 
    hacksoc_org = hacksoc_org.cli:main

# [options.extras_require]
