[metadata]
name = hacksoc_org
version = 1.0.0

[options]
packages = find:
install_requires =
    flask
    python-dotenv
    frozen-flask
    pyyaml
    pygments
    python-frontmatter
    pygit2
    black
    markdown2
    # markdown-it-py
    # mistletoe
    # commonmark
    # cmarkgfm

[options.entry_points]
console_scripts = 
    hacksoc_org = hacksoc_org.cli:main

# [options.extras_require]
