[metadata]
name = hacksoc_org
version = 1.0.0

[options]
packages = find:
install_requires =
    flask
    frozen-flask
    pyyaml
    pygments
    python-frontmatter
    pygit2
    black
    markdown2
    cmarkgfm
    commonmark
    mistletoe
    # markdown-it-py

[options.entry_points]
console_scripts = 
    hacksoc_org = hacksoc_org.cli:main
